tests/NormalTests/paczka1/fuzzy1/90288767.err
Error in line 10: oSSMQ0E S357 62,0
Error in line 12: A550 A550 33,7
Error in line 11: oSSMQ0E S986 27,3
Error in line 25: A550 S986 10,5
